[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/MusicPlayer.gd" type="Script" id=1]
[ext_resource path="res://music/Game Theme/Calm - Frostbite 03 Town indoor hymn.ogg" type="AudioStream" id=2]
[ext_resource path="res://music/Game Theme/Calm - town theme_0.ogg" type="AudioStream" id=3]
[ext_resource path="res://music/Game Theme/Calm - TownTheme.ogg" type="AudioStream" id=4]
[ext_resource path="res://music/Game Theme/Game Start - Alexander Ehlers - Waking the devil.ogg" type="AudioStream" id=5]
[ext_resource path="res://music/Game Theme/Game Start - Alexander Ehlers - Warped.ogg" type="AudioStream" id=6]
[ext_resource path="res://music/Game Theme/Situational - Alexander Ehlers - Flags.ogg" type="AudioStream" id=7]
[ext_resource path="res://music/Game Theme/Situational - Alexander Ehlers - Spacetime.ogg" type="AudioStream" id=8]
[ext_resource path="res://music/Game Theme/Situational - Alexander Ehlers - Twists.ogg" type="AudioStream" id=9]
[ext_resource path="res://music/Game Theme/Situational - To Be Tacribian.ogg" type="AudioStream" id=10]
[ext_resource path="res://music/Game Theme/Situational - tridentkeep-Frostbite 04 Town hayfields.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/Ambient Sounds/crow_caw.wav" type="AudioStream" id=12]

[node name="JukeBox" type="Node2D"]
script = ExtResource( 1 )

[node name="Calm01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Calm02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Calm03" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="GameStart01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="GameStart02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Situational01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Situational02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Situational03" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Situational04" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Situational05" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Crow_Caw" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
[connection signal="finished" from="Calm01" to="." method="_on_audio_track_finished"]
[connection signal="finished" from="Calm02" to="." method="_on_audio_track_finished"]
[connection signal="finished" from="Calm03" to="." method="_on_audio_track_finished"]
[connection signal="finished" from="GameStart01" to="." method="_on_audio_track_finished"]
[connection signal="finished" from="GameStart02" to="." method="_on_audio_track_finished"]
[connection signal="finished" from="Situational01" to="." method="_on_audio_track_finished"]
[connection signal="finished" from="Situational02" to="." method="_on_audio_track_finished"]
[connection signal="finished" from="Situational03" to="." method="_on_audio_track_finished"]
[connection signal="finished" from="Situational04" to="." method="_on_audio_track_finished"]
[connection signal="finished" from="Situational05" to="." method="_on_audio_track_finished"]
